# DriveFileCounter

./: README.md  estimate_files.py  index.js  package-lock.json  package.json  test.js  test2.js
npm-package/: .gitignore  .npmignore  README.md  estimate_files.py  index.js  package-lock.json  package.json  test.js  test2.js
vcpkg/: CMakeLists.txt  README.md  vcpkg.json
vcpkg/include/: drive_file_counter.h
vcpkg/src/: drive_file_counter.c
vcpkg/tests/: test_counter.c
